<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/edit_profile"
        android:title="@string/edit_profile"
        android:iconTint="@color/colorOnPrimary"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="never"/>
    <item android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"/>
    <item android:id="@+id/change_password"
        android:title="@string/change_password"
        android:icon="@drawable/ic_outline_security_24"
        app:showAsAction="never"/>
    <item android:id="@+id/logout"
        android:title="@string/menu_logout"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"/>
</menu>